--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.jibidus.intellijplugincustomdebuggerrenderer
+pluginGroup = org.jibidus
 pluginName = intellij-plugin-custom-debugger-renderer
 pluginRepositoryUrl = https://github.com/jibidus/intellij-plugin-custom-debugger-renderer
 # SemVer format -> https://semver.org
