--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.jibidus.intellijplugincustomdebuggerrenderer</id>
+    <id>org.jibidus.intellij.customdebuggerrenderer</id>
     <name>intellij-plugin-custom-debugger-renderer</name>
     <vendor>jibidus</vendor>
 
@@ -9,7 +9,7 @@
     <resource-bundle>messages.MyBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.jibidus.intellijplugincustomdebuggerrenderer.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
-        <postStartupActivity implementation="com.github.jibidus.intellijplugincustomdebuggerrenderer.startup.MyProjectActivity" />
+        <toolWindow factoryClass="org.jibidus.intellij.customdebuggerrenderer.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <postStartupActivity implementation="org.jibidus.intellij.customdebuggerrenderer.startup.MyProjectActivity" />
     </extensions>
 </idea-plugin>
