--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,4 +17,8 @@
                 order="first"
                 implementation="org.jibidus.intellij.customdebuggerrenderer.KotlinKDocImageInlineDocumentationProvider"/>
     </extensions>
+
+    <extensions defaultExtensionNs="org.jetbrains.kotlin">
+        <supportsKotlinPluginMode supportsK2="true" />
+    </extensions>
 </idea-plugin>
