--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 # libraries
 junit = "4.13.2"
 opentest4j = "1.3.0"
+atrium = "1.2.0"
 
 # plugins
 changelog = "2.2.1"
@@ -13,6 +14,7 @@ qodana = "2024.3.4"
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 opentest4j = { group = "org.opentest4j", name = "opentest4j", version.ref = "opentest4j" }
+atrium = { group = "ch.tutteli.atrium", name = "atrium-fluent", version.ref = "atrium" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
